--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PandQ Application</string>
+    <!-- TODO: Replace with real OAuth Web Client ID from Firebase Console -->
+    <string name="default_web_client_id">951162743968-placeholder.apps.googleusercontent.com</string>
 </resources>
