--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -77,6 +77,7 @@
     <string name="user_guide">Hướng dẫn sử dụng</string>
     <string name="policy_terms">Chính sách &amp; Điều khoản</string>
     <string name="logout">Đăng xuất</string>
+    <string name="close_account">Đóng tài khoản</string>
     <string name="default_avatar">Avatar mặc định</string>
     <string name="avatar">Avatar</string>
     <string name="back">Quay lại</string>
